Reverting cleanup changes